# map-game

./: .gitignore  Cargo.toml  design.org  map.ron  research.org  save.ron  todo.org
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
map-derive/: Cargo.toml
map-derive/src/: lib.rs
src/: agent.rs  camera.rs  constant.rs  decision.rs  factor.rs  formula.rs  gameref.rs  input.rs  main.rs  map.rs  messaging.rs  modifier.rs  pops.rs  probability.rs  province.rs  save.rs  settlement.rs  stage.rs  tag.rs  time.rs  tut.rs  ui.rs
src/ui/: mod.rs  tree.rs
