[package]
name = "map-game"
version = "0.1.0"
authors = ["Riley Stewart <rstewart@smartvue.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
# bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "*"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
dashmap = "4.0.1"
