[package]
name = "map-game"
version = "0.1.0"
authors = ["Riley Stewart <rstewart@smartvue.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros", version = "0.1.0" }
lazy_static = "1.4.0"
bevy = "0.5"
#bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "*"
rand_distr = "*"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
dashmap = "4.0.1"
bevy_tilemap = { git = "https://github.com/joshuajbouw/bevy_tilemap" }
# notify = "5.0.0-pre.11"
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20"
